  * Config Dialogue: An editor for the startup file.
  * It is now possible to select which formats "Ctrl+C" should place data on
    the clipboard in.
  * Now multiple animations can run concurrently and can be told to autostart.
  * A menu entry that allows to select 1D and ASCII Art Maths
  * Recent files that currently don't exist are grayed out now.
  * Many Bug Fixes and Performance improvements.

17.05:
  * A config item that allows to disable printing of Cell brackets.
  * Cell brackets of inactive cells can now be hidden.
  * Due to popular demand we can now suppress the output of automatic labels.
  * The option to use a Minus instead of a Hyphen.
  * Table of Contents: Folded items are now grayed out.
  * Table of Contents: A right-click menu.
  * Copy-and-paste now includes hidden cells and folded items.
  * Eye Candy: An indicator that shows when maxima and wxMaxima exchange data.
    Double-clicking this indicator opens up the network monitor.
  * Autocompletion now collects words from the current code cell, too.
  * Better indentation of if clauses and loops.
  * If the number is too long to display it now is still possible to copy it.
  * Documented that box() highlights text in maxima's output.
  * the with_slider type of commands now uses wxstatusbar() in order to provide
  * progress information for the user.
  * Several scrolling fixes, again.
  * Two concurrent wxMaxima instances now no more overwrite each other's "Recent files"
    list.
  * If a error message or question arises or maxima finishes calculating and the window
    currently isn't active the operating system is asked to notify the user in a
    non-disrupting way. For the case of the end of a calculation this can be turned off.
  * The notification can be activated for the case that the window isn't active and maxima
    finishes calculating, too.
  * Invalid XML tags are now handled more gracefully
  * Deduplicated the code for saving .wxm files