@@ -20,6 +20,7 @@ Current:
   * Now multiple animations can run concurrently and can be told to autostart.
   * A menu entry that allows to select 1D and ASCII Art Maths
   * Recent files that currently don't exist are grayed out now.
+  * A command-line switch that triggers evaluation on startup of wxMaxima
   * Many Bug Fixes and Performance improvements.
 
 17.05:
